Updated site frame's styling to prevent overflow and improve site boundaries with css backgrounds/effects

--- a/src/HomePage/MastHead/styles.scss
+++ b/src/HomePage/MastHead/styles.scss
@@ -1,4 +1,5 @@
 .MastHead {
+    max-width: 100%;
     height: 100vh;
     min-height: 600px;
     background-position: center;
