--- a/src/HomePage/styles.scss
+++ b/src/HomePage/styles.scss
@@ -1,4 +1,11 @@
 
 .HomePage__content {
-    padding: 20px 30px;
+    padding: 40px 30px;
+}
+
+.HomePage__appDescription {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.5rem;
 }
