--- a/src/SiteFrame/Footer/styles.scss
+++ b/src/SiteFrame/Footer/styles.scss
@@ -1,7 +1,10 @@
 @use "../../variables";
 
 .Footer {
+    z-index: 10;
+    box-sizing: border-box;
     width: 100%;
+    max-width: 100%;
     padding: 30px 20px 60px;
     background-color: variables.$pure-black;
     color: white;
