--- a/src/SiteFrame/MainNav/styles.scss
+++ b/src/SiteFrame/MainNav/styles.scss
@@ -1,6 +1,9 @@
 @use "../../variables";
 
 .MainNav {
+    z-index: 1000;
+    position: absolute;
+    box-sizing: border-box;
     width: 100%;
     display: flex;
     justify-content: center;
